# glorious-ticket-checker

./: .gitignore  Caddyfile  Dockerfile  flake.nix  module.nix  pyproject.toml
.github/workflows/: build_nix.yml
ticket_checker/: .gitignore  manage.py
ticket_checker/panel/: admin.py  models.py  urls.py  views.py
ticket_checker/panel/migrations/: 0001_initial.py  0002_auto_20210416_1008.py  0003_ticket_email.py
ticket_checker/panel/npm/: bundle.js  package.json  rollup.config.js  tsconfig.json
ticket_checker/panel/npm/src/: index.ts
ticket_checker/panel/templates/panel/: checker.html  email.html  import_tickets.html  index.html
ticket_checker/ticket_checker/: asgi.py  settings.py  urls.py  wsgi.py
