[tool.poetry]
name = "ticket-checker"
version = "0.1.0"
description = ""
authors = ["Vladimir Serov <me@cab404.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
